WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190324
NetworkCache::Storage should be WTF::DestructionThread::Main
https://bugs.webkit.org/show_bug.cgi?id=190324
Summary
NetworkCache::Storage should be WTF::DestructionThread::Main
youenn fablet
Reported
2018-10-05 16:15:40 PDT
This will simplify the code and make it more robust.
Attachments
Patch
(6.40 KB, patch)
2018-10-05 16:22 PDT
,
youenn fablet
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-sierra-wk2
(3.68 MB, application/zip)
2018-10-05 17:48 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews201 for win-future
(12.70 MB, application/zip)
2018-10-05 18:54 PDT
,
EWS Watchlist
no flags
Details
Patch
(8.43 KB, patch)
2018-10-05 21:01 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(8.43 KB, patch)
2018-10-05 21:03 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(8.43 KB, patch)
2018-10-05 21:04 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-sierra-wk2
(3.30 MB, application/zip)
2018-10-05 22:13 PDT
,
EWS Watchlist
no flags
Details
Patch
(8.64 KB, patch)
2018-10-06 07:56 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-10-05 16:22:55 PDT
Created
attachment 351705
[details]
Patch
EWS Watchlist
Comment 2
2018-10-05 17:47:58 PDT
Comment on
attachment 351705
[details]
Patch
Attachment 351705
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9467282
New failing tests: imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-add.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/worker/cache-add.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-delete.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-put.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/worker/cache-put.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-match.https.html imported/w3c/web-platform-tests/service-workers/service-worker/fetch-canvas-tainting-cache.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-matchAll.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-keys.https.html imported/w3c/web-platform-tests/service-workers/service-worker/redirected-response.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/serviceworker/cache-storage.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/worker/cache-match.https.html imported/w3c/web-platform-tests/service-workers/service-worker/interfaces-sw.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/worker/cache-matchAll.https.html imported/w3c/web-platform-tests/service-workers/cache-storage/worker/cache-keys.https.html
EWS Watchlist
Comment 3
2018-10-05 17:48:00 PDT
Created
attachment 351707
[details]
Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4
2018-10-05 18:54:46 PDT
Comment on
attachment 351705
[details]
Patch
Attachment 351705
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/9467586
New failing tests: http/tests/misc/resource-timing-resolution.html
EWS Watchlist
Comment 5
2018-10-05 18:54:58 PDT
Created
attachment 351709
[details]
Archive of layout-test-results from ews201 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews201 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
youenn fablet
Comment 6
2018-10-05 21:01:33 PDT
Created
attachment 351714
[details]
Patch
youenn fablet
Comment 7
2018-10-05 21:03:49 PDT
Created
attachment 351715
[details]
Patch
youenn fablet
Comment 8
2018-10-05 21:04:41 PDT
Created
attachment 351716
[details]
Patch
EWS Watchlist
Comment 9
2018-10-05 22:13:30 PDT
Comment on
attachment 351716
[details]
Patch
Attachment 351716
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9468829
New failing tests: css3/filters/backdrop/add-remove-add-backdrop-filter.html
EWS Watchlist
Comment 10
2018-10-05 22:13:32 PDT
Created
attachment 351717
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Michael Catanzaro
Comment 11
2018-10-06 02:38:38 PDT
Comment on
attachment 351716
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=351716&action=review
> Source/WebKit/NetworkProcess/cache/NetworkCacheStorage.cpp:-242 > Storage::~Storage() > { > - ASSERT(RunLoop::isMain());
Um... why are you removing the assertion that checks that it is destroyed on the main thread?
youenn fablet
Comment 12
2018-10-06 07:26:12 PDT
(In reply to Michael Catanzaro from
comment #11
)
> Comment on
attachment 351716
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=351716&action=review
> > > Source/WebKit/NetworkProcess/cache/NetworkCacheStorage.cpp:-242 > > Storage::~Storage() > > { > > - ASSERT(RunLoop::isMain()); > > Um... why are you removing the assertion that checks that it is destroyed on > the main thread?
This is guaranteed by ThreadSafeRefCounted<DestructionThread::Main>. I can keep it if that helps. If useful here, it might be best to add such assertion in ThreadSafeRefCounted destructor instead of here.
youenn fablet
Comment 13
2018-10-06 07:56:03 PDT
Created
attachment 351724
[details]
Patch
Michael Catanzaro
Comment 14
2018-10-07 12:08:48 PDT
(In reply to youenn fablet from
comment #12
)
> This is guaranteed by ThreadSafeRefCounted<DestructionThread::Main>. > I can keep it if that helps.
Up to you, but I think I would keep it. Of course every assertion in the codebase should be guaranteed to never fail already... we have them because we know sometimes things go wrong.
> If useful here, it might be best to add such assertion in > ThreadSafeRefCounted destructor instead of here.
Sounds good.
Antti Koivisto
Comment 15
2018-10-08 01:18:58 PDT
> If useful here, it might be best to add such assertion in > ThreadSafeRefCounted destructor instead of here.
I don't think ThreadSafeRefCounted implies that the object needs to be destroyed in the main thread.
youenn fablet
Comment 16
2018-10-08 08:40:26 PDT
(In reply to Antti Koivisto from
comment #15
)
> > If useful here, it might be best to add such assertion in > > ThreadSafeRefCounted destructor instead of here. > > I don't think ThreadSafeRefCounted implies that the object needs to be > destroyed in the main thread.
ThreadSafeRefCounted does not. ThreadSafeRefCounted<WTF::DestructionThread::Main> does. I kept the assert for now though.
WebKit Commit Bot
Comment 17
2018-10-08 13:22:07 PDT
Comment on
attachment 351724
[details]
Patch Clearing flags on attachment: 351724 Committed
r236936
: <
https://trac.webkit.org/changeset/236936
>
WebKit Commit Bot
Comment 18
2018-10-08 13:22:09 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 19
2018-10-08 13:23:32 PDT
<
rdar://problem/45102139
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug